# agentdelta

./: .aider.conf.yml  .coderabbit.yaml  .gitignore  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  action.yml  ai-catalog.json  mkdocs.yml  openapi.yaml  pyproject.toml  smithery.yaml  smoke_test.py
.claude/commands/: add-adapter.md  diff.md  inspect.md  record.md
.continue/: config.json
.cursor/rules/: agentdelta.mdc  redline.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: demo.tape
docs/: adding-adapter.md  api-reference.md  architecture.md  cli-reference.md  contributing.md  github-action.md  how-it-works.md  index.md  mcp.md  openai.md  quickstart.md  trace-format.md
docs/case-studies/: content-pipeline-prompt-regression-detection.md  fintech-ci-behavioral-regression.md  healthtech-model-upgrade-audit.md
examples/: agent_debug_pipeline.py  ci_regression_check.py  content_pipeline_regression.py  demo.py  model_upgrade_audit.py  prompt_ab_testing.py
src/agentdelta/: __init__.py  api.py  batch.py  cli.py  diff.py  embed.py  html_report.py  instrument.py  mcp_server.py  report.py  score.py  trace.py
src/redline/: __init__.py  api.py  cli.py  diff.py  embed.py  instrument.py  mcp_server.py  report.py  trace.py
submissions/02_aaif_registry/: server.json
tests/: conftest.py  test_api.py  test_batch.py  test_cli.py  test_diff.py  test_embed.py  test_html_report.py  test_instrument.py  test_mcp_server.py  test_report.py  test_score.py  test_trace.py
tools/: openai-tools.json
